<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IniciarSesion2a">

    <LinearLayout
        android:layout_width="402dp"
        android:layout_height="58dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/btnRegresar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/imagenizq"
            app:srcCompat="@drawable/izq" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="349dp"
            android:layout_height="90dp"
            android:layout_weight="1"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/inicia_sesion"
            android:textColor="#6680d4"
            android:textSize="36dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnInicioSesion"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:background="@drawable/forma_boton_contraria"
        android:fontFamily="@font/yanone_kaffeesatz"
        android:text="@string/aceptar"
        android:textColor="#6680d4"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.676" />

    <EditText
        android:id="@+id/txtCorreo"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:backgroundTint="#6680d4"
        android:ems="10"
        android:fontFamily="@font/nova_slim"
        android:hint="@string/introduce_el_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.345" />

    <EditText
        android:id="@+id/txtContrasenia"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/nova_slim"
        android:hint="@string/introduce_la_contra"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.486"
        android:backgroundTint="#6680d4"/>

</androidx.constraintlayout.widget.ConstraintLayout>