<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroAdministrador2b">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="400dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/btnRegresar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/imagenizq"
            app:srcCompat="@drawable/izq" />

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="@string/registro"
            android:textColor="#6680d4"
            android:textSize="36sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/txtPassGenerada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginBottom="360dp"
        android:fontFamily="@font/nova_slim"
        android:textColor="#6680D4"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnAceptarDatos"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginBottom="68dp"
        android:background="@drawable/forma_boton"
        android:enabled="false"
        android:text="@string/confirmar_registro"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGenerar"
        android:layout_width="204dp"
        android:layout_height="50dp"
        android:layout_marginStart="112dp"
        android:layout_marginLeft="112dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/forma_boton_contraria"
        android:text="@string/generar_contra"
        android:textColor="#6680D4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="312dp"
        android:fontFamily="@font/nova_slim"
        android:text="@string/apunta_tu_contrase_a_en_un_lugar_seguro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="156dp"
        android:layout_marginLeft="156dp"
        android:layout_marginBottom="440dp"
        android:fontFamily="@font/nova_slim"
        android:text="@string/tu_contra_es"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="26dp"
        android:autofillHints=""
        android:backgroundTint="#6680d4"
        android:ems="10"
        android:fontFamily="@font/nova_slim"
        android:hint="@string/introduce_el_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/btnGenerar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/txtRegistroCole"
        android:layout_width="335dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:backgroundTint="#6680d4"
        android:ems="10"
        android:fontFamily="@font/nova_slim"
        android:hint="Introduce el ID del colegio"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.701"
        tools:targetApi="lollipop" />

</androidx.constraintlayout.widget.ConstraintLayout>