<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModificarColegio4">

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:background="@drawable/forma_boton_contraria"
        android:fontFamily="@font/yanone_kaffeesatz"
        android:text="Cerrar sesión"
        android:textColor="#6680D4"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:text="@string/eliminar_profesor"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_EliminarProfe"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:tint="@color/white"
            app:backgroundTint="#6680d4"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_remove_black_24dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="5dp"
            android:fontFamily="@font/yanone_kaffeesatz"
            android:text="@string/eliminar_aula"
            android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_eliminarAula"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:tint="@color/white"
            app:backgroundTint="#6680d4"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_remove_black_24dp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/yanone_kaffeesatz"
                android:text="@string/a_adir_aula"
                android:textSize="18sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_añadirAula"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:tint="@color/white"
                app:backgroundTint="#6680d4"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_add_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/yanone_kaffeesatz"
                android:text="@string/a_adir_profesor"
                android:textSize="18sp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_añadirProfe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:tint="@color/white"
                app:backgroundTint="#6680d4"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_add_black_24dp" />
        </LinearLayout>

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:fontFamily="@font/yanone_kaffeesatz"
                android:text="@string/modificar_profesor"
                android:textSize="18sp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_ModificarProfe"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="4dp"
            android:tint="@color/white"
            app:backgroundTint="#6680d4"
            app:fabSize="mini"
            app:srcCompat="@drawable/ic_mode_edit_black_24dp" />
        </LinearLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_opciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom|end"
            android:tint="@color/white"
            android:layout_margin="4dp"
            app:backgroundTint="#6680d4"
            app:fabSize="normal"
            app:srcCompat="@drawable/ic_view_headline_black_24dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/txtBienvenido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenido, el ID de tu colegio es: "
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046" />

    <TextView
        android:id="@+id/txtIdColeMod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />


</androidx.constraintlayout.widget.ConstraintLayout>